# UAV_object_tracker

./: .gitignore  CMakeLists.txt  README.md  package.xml
custom_world/: walking_person.world
include/yolo_tracker/: ObjectDetector.hpp  UAVController.hpp  utils.hpp
launch/: tracker.launch
simulation_scripts/: session.yml
src/: ObjectDetector.cpp  UAVController.cpp  main.cpp  utils.cpp
